--- a/src/App.css
+++ b/src/App.css
@@ -173,28 +173,9 @@ img {
 }
 
 /* Grid */
-.grid-2 {
+.grid-2-form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
-}
-
-.grid-3 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-}
-
-.grid-4 {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2rem;
-}
-
-.grid-2-3 {
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  grid-gap: 2rem;
+  grid-template-columns: auto 100px;
 }
 
 .btn {
